Updated Java; Analyze feature implemented